2.1.0/_sources/api/nexusLIMS/nexusLIMS.harvesters.nemo.utils.md.txt
# {py:mod}`nexusLIMS.harvesters.nemo.utils`

```{py:module} nexusLIMS.harvesters.nemo.utils
```

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils
:allowtitles:
```

## Module Contents

### Functions

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`get_harvesters_enabled <nexusLIMS.harvesters.nemo.utils.get_harvesters_enabled>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_harvesters_enabled
    :summary:
    ```
* - {py:obj}`add_all_usage_events_to_db <nexusLIMS.harvesters.nemo.utils.add_all_usage_events_to_db>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.add_all_usage_events_to_db
    :summary:
    ```
* - {py:obj}`get_usage_events_as_sessions <nexusLIMS.harvesters.nemo.utils.get_usage_events_as_sessions>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_usage_events_as_sessions
    :summary:
    ```
* - {py:obj}`get_connector_for_session <nexusLIMS.harvesters.nemo.utils.get_connector_for_session>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_connector_for_session
    :summary:
    ```
* - {py:obj}`get_connector_by_base_url <nexusLIMS.harvesters.nemo.utils.get_connector_by_base_url>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_connector_by_base_url
    :summary:
    ```
* - {py:obj}`process_res_question_samples <nexusLIMS.harvesters.nemo.utils.process_res_question_samples>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.process_res_question_samples
    :summary:
    ```
* - {py:obj}`_get_res_question_value <nexusLIMS.harvesters.nemo.utils._get_res_question_value>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils._get_res_question_value
    :summary:
    ```
* - {py:obj}`id_from_url <nexusLIMS.harvesters.nemo.utils.id_from_url>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.id_from_url
    :summary:
    ```
````

### Data

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`logger <nexusLIMS.harvesters.nemo.utils.logger>`
  - ```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.logger
    :summary:
    ```
````

### API

````{py:data} logger
:canonical: nexusLIMS.harvesters.nemo.utils.logger
:value: >
   'getLogger(...)'

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.logger
```

````

````{py:function} get_harvesters_enabled() -> typing.List[nexusLIMS.harvesters.nemo.connector.NemoConnector]
:canonical: nexusLIMS.harvesters.nemo.utils.get_harvesters_enabled

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_harvesters_enabled
```
````

````{py:function} add_all_usage_events_to_db(user: typing.Union[str, int] | None = None, dt_from: datetime.datetime | None = None, dt_to: datetime.datetime | None = None, tool_id: typing.Union[int, typing.List[int]] | None = None)
:canonical: nexusLIMS.harvesters.nemo.utils.add_all_usage_events_to_db

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.add_all_usage_events_to_db
```
````

````{py:function} get_usage_events_as_sessions(user: typing.Union[str, int] | None = None, dt_from: datetime.datetime | None = None, dt_to: datetime.datetime | None = None, tool_id: typing.Union[int, typing.List[int]] | None = None) -> typing.List[nexusLIMS.db.session_handler.Session]
:canonical: nexusLIMS.harvesters.nemo.utils.get_usage_events_as_sessions

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_usage_events_as_sessions
```
````

````{py:function} get_connector_for_session(session: nexusLIMS.db.session_handler.Session) -> nexusLIMS.harvesters.nemo.connector.NemoConnector
:canonical: nexusLIMS.harvesters.nemo.utils.get_connector_for_session

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_connector_for_session
```
````

````{py:function} get_connector_by_base_url(base_url: str) -> nexusLIMS.harvesters.nemo.connector.NemoConnector
:canonical: nexusLIMS.harvesters.nemo.utils.get_connector_by_base_url

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.get_connector_by_base_url
```
````

````{py:function} process_res_question_samples(res_dict: typing.Dict) -> typing.Tuple[typing.List[str | None] | None, typing.List[str | None] | None, typing.List[str | None] | None, typing.List[str | None] | None]
:canonical: nexusLIMS.harvesters.nemo.utils.process_res_question_samples

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.process_res_question_samples
```
````

````{py:function} _get_res_question_value(value: str, res_dict: typing.Dict) -> typing.Union[str, typing.Dict] | None
:canonical: nexusLIMS.harvesters.nemo.utils._get_res_question_value

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils._get_res_question_value
```
````

````{py:function} id_from_url(url: str) -> int | None
:canonical: nexusLIMS.harvesters.nemo.utils.id_from_url

```{autodoc2-docstring} nexusLIMS.harvesters.nemo.utils.id_from_url
```
````
